src/objects/Big_Deal_Resource__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Big Deal Resource</relationshipLabel>
        <relationshipName>Big_Deal_Resource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuestionario Big deals</label>
        <referenceTo>Big_deals_Survey__c</referenceTo>
        <relationshipLabel>Big Deal Resource</relationshipLabel>
        <relationshipName>Big_Deal_Resource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>currency__c</fullName>
        <label>currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Big Deal Resource</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Big Deal Resource</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>